Attempt to fix categories visibility in the sidebar.

--- a/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
+++ b/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
@@ -9,17 +9,13 @@
 }
 
 body:not(.term-ypatingi-pasiulymai) {
-    .wc-block-product-categories ul:first-of-type {
-        li:first-of-type {
-            display: none;
-        }
+    .wc-block-product-categories-list--depth-0 li:first-of-type {
+        display: none;
     }
 }
 
 .term-ypatingi-pasiulymai {
-    .wc-block-product-categories ul:first-of-type {
-        li:not(:first-of-type) {
-            display: none;
-        }
+    .wc-block-product-categories-list--depth-0 li:not(:first-of-type) {
+        display: none;
     }
 }
